migrate `ResourceRepositoryImpl` to use only one change recorder as otherwise transactions on the shared UUID resolver are ended before all IDs are assigned