@@ -11,12 +11,10 @@ import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Set;
 
 import org.apache.log4j.Logger;
 import org.eclipse.emf.common.util.URI;
@@ -41,47 +39,14 @@ class ResourceRepositoryImpl implements ModelRepository {
 
 	private final ResourceSet modelsResourceSet = withGlobalFactories(new ResourceSetImpl());
 	private final Map<URI, ModelInstance> modelInstances = new HashMap<>();
-	private final FileExtensionRecorderMapping fileExtensionRecorderMapping = new FileExtensionRecorderMapping();
 	private final PersistableCorrespondenceModel correspondenceModel;
 	private final UuidResolver uuidResolver = UuidResolver.create(modelsResourceSet);
+	private final ChangeRecorder changeRecorder = new ChangeRecorder(modelsResourceSet, uuidResolver);
 
 	private final VsumFileSystemLayout fileSystemLayout;
 
 	private boolean isRecording = false;
 	private boolean isLoading = false;
-
-	/**
-	 * Manages change recorders for file extensions. Ensures that only one change
-	 * recorder per file extension exists. A recorder is assigned to a set of file
-	 * extensions (for the case that multiple file extensions belong to the same
-	 * domain of models and should be recorder together) and recorders can be
-	 * retrieved for a given file extension.
-	 */
-	private static class FileExtensionRecorderMapping {
-		private final Map<Set<String>, ChangeRecorder> fileExtensionsToRecorder = new HashMap<>();
-		private final Map<String, Set<String>> fileExtensionToExtensionsSet = new HashMap<>();
-
-		Set<ChangeRecorder> getRecorders() {
-			return new HashSet<>(fileExtensionsToRecorder.values());
-		}
-
-		boolean hasRecorder(String fileExtension) {
-			return fileExtensionsToRecorder.containsKey(fileExtensionToExtensionsSet.get(fileExtension));
-		}
-
-		ChangeRecorder getRecorder(String fileExtension) {
-			return fileExtensionsToRecorder.get(fileExtensionToExtensionsSet.get(fileExtension));
-		}
-
-		void registerRecorder(Set<String> fileExtensions, ResourceSet recorderResourceSet, UuidResolver uuidResolver) {
-			fileExtensionToExtensionsSet.keySet().forEach(
-					it -> checkState(!fileExtensions.contains(it), "there already is a recorder for metamodel " + it));
-			Set<String> fileExtensionsSet = new HashSet<>(fileExtensions);
-			fileExtensions.forEach(it -> fileExtensionToExtensionsSet.put(it, fileExtensionsSet));
-			ChangeRecorder recorder = new ChangeRecorder(recorderResourceSet, uuidResolver);
-			fileExtensionsToRecorder.put(fileExtensionsSet, recorder);
-		}
-	}
 
 	ResourceRepositoryImpl(VsumFileSystemLayout fileSystemLayout) {
 		this.fileSystemLayout = fileSystemLayout;
@@ -103,15 +68,16 @@ class ResourceRepositoryImpl implements ModelRepository {
 	}
 
 	private void writeModelsFile() throws IOException {
-		Files.write(fileSystemLayout.getModelsNamesFilesPath(),
-				modelsResourceSet.getResources().stream().map(Resource::getURI).map(URI::toString).toList());
+		Files.write(fileSystemLayout.getModelsNamesFilesPath(), modelsResourceSet.getResources().stream()
+				.map(Resource::getURI).map(URI::toString).toList());
 	}
 
 	private void readModelsFile() throws IOException {
 		List<URI> modelUris;
 		try {
-			modelUris = Files.readAllLines(fileSystemLayout.getModelsNamesFilesPath()).stream().map(URI::createURI).collect(Collectors.toList());
-			
+			modelUris = Files.readAllLines(fileSystemLayout.getModelsNamesFilesPath()).stream().map(URI::createURI)
+					.toList();
+
 		} catch (NoSuchFileException e) {
 			// There are no existing models, so don't do anything
 			return;
@@ -130,7 +96,7 @@ class ResourceRepositoryImpl implements ModelRepository {
 	public ModelInstance getModel(URI modelUri) {
 		return modelInstances.get(modelUri);
 	}
-	
+
 	@Override
 	public UuidResolver getUuidResolver() {
 		return uuidResolver;
@@ -167,14 +133,9 @@ class ResourceRepositoryImpl implements ModelRepository {
 	private void registerRecorder(ModelInstance modelInstance) {
 		// Only monitor modifiable models (file / platform URIs, not pathmap URIs)
 		if (modelInstance.getURI().isFile() || modelInstance.getURI().isPlatform()) {
-			String fileExtension = modelInstance.getURI().fileExtension();
-			if (!fileExtensionRecorderMapping.hasRecorder(fileExtension)) {
-				fileExtensionRecorderMapping.registerRecorder(Set.of(fileExtension), modelsResourceSet, uuidResolver);
-			}
-			ChangeRecorder recorder = fileExtensionRecorderMapping.getRecorder(fileExtension);
-			recorder.addToRecording(modelInstance.getResource());
-			if (isRecording && !recorder.isRecording()) {
-				recorder.beginRecording();
+			changeRecorder.addToRecording(modelInstance.getResource());
+			if (isRecording && !changeRecorder.isRecording()) {
+				changeRecorder.beginRecording();
 			}
 		}
 	}
@@ -210,27 +171,27 @@ class ResourceRepositoryImpl implements ModelRepository {
 
 	@Override
 	public Iterable<TransactionalChange> recordChanges(Runnable changeApplicator) {
-		fileExtensionRecorderMapping.getRecorders().forEach(ChangeRecorder::beginRecording);
+		changeRecorder.beginRecording();
 		isRecording = true;
 		LOGGER.debug("Start recording virtual model");
 		changeApplicator.run();
 		LOGGER.debug("End recording virtual model");
 		isRecording = false;
-		fileExtensionRecorderMapping.getRecorders().forEach(ChangeRecorder::endRecording);
-		return fileExtensionRecorderMapping.getRecorders().stream().map(ChangeRecorder::getChange)
-				.filter(TransactionalChange::containsConcreteChange).toList();
+		changeRecorder.endRecording();
+		TransactionalChange change = changeRecorder.getChange();
+		return change.containsConcreteChange() ? List.of(change) : List.of();
 	}
 
 	@Override
 	public VitruviusChange applyChange(VitruviusChange change) {
 		return change.resolveAndApply(uuidResolver);
 	}
-	
+
 	@Override
 	public URI getMetadataModelURI(String... metadataKey) {
 		return fileSystemLayout.getConsistencyMetadataModelURI(metadataKey);
 	}
-	
+
 	@Override
 	public Resource getModelResource(URI uri) {
 		return getCreateOrLoadModel(uri).getResource();
@@ -243,7 +204,7 @@ class ResourceRepositoryImpl implements ModelRepository {
 
 	@Override
 	public void close() {
-		fileExtensionRecorderMapping.fileExtensionsToRecorder.values().forEach(ChangeRecorder::close);
+		changeRecorder.close();
 		modelsResourceSet.getResources().forEach(Resource::unload);
 		modelsResourceSet.getResources().clear();
 	}
